Fixed issue with no posts showing incorrectly. Updated CSS to fix whitespace bug.

--- a/portfolio/src/main/resources/static/styles/pages/group_feed.css
+++ b/portfolio/src/main/resources/static/styles/pages/group_feed.css
@@ -32,6 +32,7 @@
 }
 
 .post-body {
+    white-space: break-spaces;
     padding: 15px 0 10px 0;
     font-size: 17px;
 }
