--- a/portfolio/src/main/resources/static/styles/pages/home_feed.css
+++ b/portfolio/src/main/resources/static/styles/pages/home_feed.css
@@ -27,6 +27,7 @@
 /*}*/
 
 .post-body {
+    white-space: break-spaces;
     padding: 15px 0 10px 0;
 }
 
